# OpenFBX

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  openfbxConfig.cmake.in
.github/workflows/: build.yml  build.yml.txt
ci/: CMakeLists.txt  main.cpp
demo/: demo.cpp  main.cpp
demo/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_dock.h  imgui_dock.inl  imgui_impl_win32.cpp  imgui_internal.h  imgui_user.h  stb_rect_pack.h  stb_truetype.h
projects/: genie.lua  genie_vs17.bat  genie_vs19.bat
runtime/: a.FBX  b.fbx  c.FBX  d.fbx  imgui.ini  license.txt
src/: main.cpp  ofbx.cpp  ofbx.h
